--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@use './reset.scss';
+@use './variables.scss' as *;
+
+body {
+    @include text-bold;
+}
