--- a/src/app/components/form-field/form-field.component.html
+++ b/src/app/components/form-field/form-field.component.html
@@ -1,5 +1,3 @@
 <label [for]="title()">{{ title() }}</label>
 <ng-content select="input, textarea" />
-@if (showError()) {
-    <p>Campo obrigatório</p>
-}
+<ng-content select=".error" />
