feat: adicionar estilo para classe de erro

--- a/src/app/components/form-field/form-field.component.scss
+++ b/src/app/components/form-field/form-field.component.scss
@@ -34,4 +34,10 @@
     textarea {
         @include input-style('textarea');
     }
+
+    .error {
+        color: $error-color;
+        font-size: 1.4rem;
+        margin-top: .4rem;
+    }
 }
