--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,6 +12,8 @@ $gray-400: #323238;
 
 $sucess-color: #1D8841;
 
+$error-color: #FF4D4D;
+
 $font-family: 'IBM Plex Sans', sans-serif;
 $font-family-secundary: 'Titillium Web', sans-serif;
 $line-height: 150%;
