--- a/src/app/components/multistep-form/multistep-form.component.scss
+++ b/src/app/components/multistep-form/multistep-form.component.scss
@@ -13,8 +13,9 @@
     form {
         display: grid;
         row-gap: 1.6rem;
-        
-        margin-bottom: 3.2rem;
     }
 
+    footer {
+        margin-top: 1.6rem;
+    }
 }
