--- a/src/app/components/steps-button/steps-button.component.scss
+++ b/src/app/components/steps-button/steps-button.component.scss
@@ -30,6 +30,10 @@
         margin-left: auto;
         transition: background-color 0.3s ease-in-out;
 
+        &.disabled {
+            cursor: not-allowed;
+        }
+
         &:hover {
             background-color: $purple-light;
         }
