feat: remover flechinha para inputs do type number

--- a/src/app/components/form-field/form-field.component.scss
+++ b/src/app/components/form-field/form-field.component.scss
@@ -45,4 +45,10 @@
         font-size: 1.4rem;
         margin-top: .4rem;
     }
+
+    /* Chrome, Safari, Edge, Opera */
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+    }
 }
