refactor: utilizar disabled do pseudo element

--- a/src/app/components/steps-button/steps-button.component.html
+++ b/src/app/components/steps-button/steps-button.component.html
@@ -6,12 +6,11 @@
     <button 
         type="button" 
         class="btn-continue"
-        [class.disabled]="disabled()"
         [disabled]="disabled()" 
         (click)="onClickContinue()"
     >
         continuar
     </button>
 } @else {
-    <button type="submit">enviar proposta</button>
+    <button type="submit" [disabled]="disabled()">enviar proposta</button>
 }
