--- a/src/app/components/steps-button/steps-button.component.html
+++ b/src/app/components/steps-button/steps-button.component.html
@@ -1,5 +1,5 @@
 @if (currentStep() > 0) {
-    <button type="button" class="btn-back" (click)="onClickBack()">voltar</button>
+    <button type="button" class="btn-back" (click)="onClickBack()" [disabled]="isSubmitting()">voltar</button>
 } 
 
 @if (currentStep() < 2) {
@@ -12,5 +12,5 @@
         continuar
     </button>
 } @else {
-    <button type="submit" [disabled]="disabled()">enviar proposta</button>
+    <button type="submit" [class.submitting]="isSubmitting()" [disabled]="disabled() || isSubmitting()">enviar proposta</button>
 }
