--- a/src/app/components/steps-button/steps-button.component.scss
+++ b/src/app/components/steps-button/steps-button.component.scss
@@ -29,6 +29,8 @@
 
         margin-left: auto;
         transition: background-color 0.3s ease-in-out;
+
+        position: relative;
         
         &:disabled {
             cursor: not-allowed;
@@ -37,5 +39,36 @@
         &:hover {
             background-color: $purple-light;
         }
-    }
+
+        &.submitting {
+          color: transparent;
+          pointer-events: none;
+    
+          &::after {
+            content: '';
+            position: absolute; 
+            top: 0; 
+            left: 0;
+            width: 100%; 
+            height: 100%;
+
+            background: linear-gradient(
+              90deg,
+              rgba(255,255,255,0.1)    0%,
+              rgba(255,255,255,0.18)  40%,
+              rgba(255,255,255,0.2)   60%,
+              rgba(255,255,255,0.18)  85%,
+              rgba(255,255,255,0.1)   100%
+            );
+
+            background-size: 200% 100%;
+            animation: slide-linear 700ms linear infinite;
+          }
+
+          @keyframes slide-linear {
+            from { background-position: 100% 0; }
+            to   { background-position: -100% 0; }
+          }
+        }
+        }
 }
