--- a/src/app/components/steps-button/steps-button.component.scss
+++ b/src/app/components/steps-button/steps-button.component.scss
@@ -31,10 +31,6 @@
         transition: background-color 0.3s ease-in-out;
 
         position: relative;
-        
-        &:disabled {
-            cursor: not-allowed;
-        }
 
         &:hover {
             background-color: $purple-light;
@@ -44,31 +40,35 @@
           color: transparent;
           pointer-events: none;
     
-          &::after {
-            content: '';
-            position: absolute; 
-            top: 0; 
-            left: 0;
-            width: 100%; 
-            height: 100%;
+            &::after {
+                content: '';
+                position: absolute; 
+                top: 0; 
+                left: 0;
+                width: 100%; 
+                height: 100%;
 
-            background: linear-gradient(
-              90deg,
-              rgba(255,255,255,0.1)    0%,
-              rgba(255,255,255,0.18)  40%,
-              rgba(255,255,255,0.2)   60%,
-              rgba(255,255,255,0.18)  85%,
-              rgba(255,255,255,0.1)   100%
-            );
+                background: linear-gradient(
+                    90deg,
+                    rgba(255,255,255,0.1)    0%,
+                    rgba(255,255,255,0.18)  40%,
+                    rgba(255,255,255,0.2)   60%,
+                    rgba(255,255,255,0.18)  85%,
+                    rgba(255,255,255,0.1)   100%
+                );
 
-            background-size: 200% 100%;
-            animation: slide-linear 700ms linear infinite;
-          }
+                background-size: 200% 100%;
+                animation: slide-linear 700ms linear infinite;
+            }
 
-          @keyframes slide-linear {
-            from { background-position: 100% 0; }
-            to   { background-position: -100% 0; }
-          }
+            @keyframes slide-linear {
+                from { background-position: 100% 0; }
+                to   { background-position: -100% 0; }
+            }
         }
-        }
+    }
+
+    button:disabled {
+        cursor: not-allowed;
+    }
 }
