feat: criar diretiva para tratamento de celular

--- a/src/app/components/multistep-form/multistep-form.component.html
+++ b/src/app/components/multistep-form/multistep-form.component.html
@@ -20,7 +20,8 @@
             <input
                 formControlName="phone"
                 type="tel"
-                placeholder="Digite seu número de WhatsApp com DDD" 
+                placeholder="Digite seu número de WhatsApp com DDD"
+                appFormatPhone
             />
 
             @if (phone.invalid && (phone.touched || phone.dirty)) {
